# docs/swagger.json
@@ -41,7 +41,7 @@
                         }
                     },
                     "400": {
-                        "description": "Validation failed",
+                        "description": "Validation error",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
@@ -64,12 +64,6 @@
                         "description": "Successfully logged out",
                         "schema": {
                             "$ref": "#/definitions/domain.SuccessResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Validation failed",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
                     }
                 }
@@ -107,7 +101,7 @@
                         }
                     },
                     "400": {
-                        "description": "Validation failed",
+                        "description": "Validation error",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
@@ -168,7 +162,7 @@
                         }
                     },
                     "400": {
-                        "description": "Validation failed",
+                        "description": "Validation error",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
@@ -243,12 +237,6 @@
                         "schema": {
                             "$ref": "#/definitions/domain.NoteResponse"
                         }
-                    },
-                    "400": {
-                        "description": "Validation failed",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorValidationResponse"
-                        }
                     }
                 }
             },
@@ -301,7 +289,7 @@
                         }
                     },
                     "400": {
-                        "description": "Validation failed",
+                        "description": "Validation error",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
@@ -324,12 +312,6 @@
                         "description": "Successfully retrieved current user data",
                         "schema": {
                             "$ref": "#/definitions/domain.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Validation failed",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
                     }
                 }
@@ -359,12 +341,6 @@
                         "description": "Successfully retrieved user by ID",
                         "schema": {
                             "$ref": "#/definitions/domain.UserResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Validation failed",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
                     }
                 }
@@ -407,7 +383,7 @@
                         }
                     },
                     "400": {
-                        "description": "Validation failed",
+                        "description": "Validation error",
                         "schema": {
                             "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
@@ -437,12 +413,6 @@
                         "description": "Successfully deleted user by ID",
                         "schema": {
                             "$ref": "#/definitions/domain.SuccessResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Validation failed",
-                        "schema": {
-                            "$ref": "#/definitions/domain.ErrorValidationResponse"
                         }
                     }
                 }
