# internal/adapter/http/handler/note.go
@@ -22,7 +22,6 @@ func NewNoteHandler(service port.NoteService, validator util.Validator) port.Not
 	}
 }
 
-// Create is a handler for creating a new note
 // @Summary Create a new note
 // @Description Create a new note with the specified title, content, and visibility
 // @Tags note
@@ -30,7 +29,7 @@ func NewNoteHandler(service port.NoteService, validator util.Validator) port.Not
 // @Produce json
 // @Param note body domain.NoteRequest true "Note request object"
 // @Success 201 {object} domain.NoteResponse "Successfully created a new note"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
+// @Failure 400 {object} domain.ErrorValidationResponse "Validation error"
 // @Router /note [post]
 func (n *NoteHandler) Create(ctx *fiber.Ctx) error {
 	var req domain.NoteRequest
@@ -69,7 +68,6 @@ func (n *NoteHandler) Create(ctx *fiber.Ctx) error {
 	)
 }
 
-// GetAll is a handler for retrieving all notes
 // @Summary Get all notes
 // @Description Retrieve all available notes
 // @Tags note
@@ -101,7 +99,6 @@ func (n *NoteHandler) GetAll(ctx *fiber.Ctx) error {
 	})
 }
 
-// GetByID is a handler for retrieving a note by ID
 // @Summary Get a note by ID
 // @Description Retrieve a note based on the provided ID
 // @Tags note
@@ -136,7 +133,6 @@ func (n *NoteHandler) GetByID(ctx *fiber.Ctx) error {
 	})
 }
 
-// Update is a handler for updating a note
 // @Summary Update a note by ID
 // @Description Update an existing note based on the provided ID
 // @Tags note
@@ -145,7 +141,6 @@ func (n *NoteHandler) GetByID(ctx *fiber.Ctx) error {
 // @Param id path int true "Note ID"
 // @Param note body domain.NoteRequest true "Updated note object"
 // @Success 200 {object} domain.NoteResponse "Successfully updated a note by ID"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
 // @Router /note/{id} [put]
 func (n *NoteHandler) Update(ctx *fiber.Ctx) error {
 	var req domain.NoteRequest
@@ -184,7 +179,6 @@ func (n *NoteHandler) Update(ctx *fiber.Ctx) error {
 	})
 }
 
-// Delete is a handler for deleting a note
 // @Summary Delete a note by ID
 // @Description Delete an existing note based on the provided ID
 // @Tags note
