# internal/adapter/http/handler/user.go
@@ -23,7 +23,6 @@ func NewUserHandler(service port.UserService, validator util.Validator, jwt util
 	}
 }
 
-// Register is a handler for registering a new user
 // @Summary Register a new user
 // @Description Register a new user with the specified name, email, and password
 // @Tags auth
@@ -31,7 +30,7 @@ func NewUserHandler(service port.UserService, validator util.Validator, jwt util
 // @Produce json
 // @Param user body domain.UserRegisterRequest true "User registration request object"
 // @Success 201 {object} domain.UserResponse "Successfully registered a new user"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
+// @Failure 400 {object} domain.ErrorValidationResponse "Validation error"
 // @Router /auth/register [post]
 func (u *UserHandler) Register(ctx *fiber.Ctx) error {
 	var req domain.UserRegisterRequest
@@ -64,7 +63,6 @@ func (u *UserHandler) Register(ctx *fiber.Ctx) error {
 	})
 }
 
-// Login is a handler for user login
 // @Summary User login
 // @Description Log in an existing user with the provided email and password
 // @Tags auth
@@ -72,7 +70,7 @@ func (u *UserHandler) Register(ctx *fiber.Ctx) error {
 // @Produce json
 // @Param user body domain.UserLoginRequest true "User login request object"
 // @Success 200 {object} domain.UserResponse "Successfully logged in"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
+// @Failure 400 {object} domain.ErrorValidationResponse "Validation error"
 // @Router /auth/login [post]
 func (u *UserHandler) Login(ctx *fiber.Ctx) error {
 	var req domain.UserLoginRequest
@@ -109,13 +107,11 @@ func (u *UserHandler) Login(ctx *fiber.Ctx) error {
 		}})
 }
 
-// Logout is a handler for user logout
 // @Summary User logout
 // @Description Log out the currently logged-in user
 // @Tags auth
 // @Produce json
 // @Success 200 {object} domain.SuccessResponse "Successfully logged out"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
 // @Router /auth/logout [post]
 func (u *UserHandler) Logout(ctx *fiber.Ctx) error {
 	if cookie := ctx.Cookies("token"); cookie == "" {
@@ -134,13 +130,11 @@ func (u *UserHandler) Logout(ctx *fiber.Ctx) error {
 	})
 }
 
-// GetCurrent is a handler for retrieving current user data
 // @Summary Get current user data
 // @Description Retrieve data of the currently logged-in user
 // @Tags user
 // @Produce json
 // @Success 200 {object} domain.UserResponse "Successfully retrieved current user data"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
 // @Router /user/current [get]
 func (u *UserHandler) GetCurrent(ctx *fiber.Ctx) error {
 	var req domain.UserRequest
@@ -164,13 +158,12 @@ func (u *UserHandler) GetCurrent(ctx *fiber.Ctx) error {
 	})
 }
 
-// GetAll is a handler for retrieving all users
 // @Summary Get all users
 // @Description Retrieve data of all registered users
 // @Tags user
 // @Produce json
 // @Success 200 {object} []domain.UserResponse "Successfully retrieved all user data"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
+// @Failure 400 {object} domain.ErrorValidationResponse "Validation error"
 // @Router /user [get]
 func (u *UserHandler) GetAll(ctx *fiber.Ctx) error {
 	result, err := u.service.GetAll()
@@ -195,7 +188,6 @@ func (u *UserHandler) GetAll(ctx *fiber.Ctx) error {
 	})
 }
 
-// GetByID is a handler for retrieving a user by ID
 // @Summary Get a user by ID
 // @Description Retrieve data of a user based on the provided ID
 // @Tags user
@@ -227,7 +219,6 @@ func (u *UserHandler) GetByID(ctx *fiber.Ctx) error {
 	})
 }
 
-// Update is a handler for updating user data
 // @Summary Update user data by ID
 // @Description Update data of an existing user based on the provided ID
 // @Tags user
@@ -236,7 +227,7 @@ func (u *UserHandler) GetByID(ctx *fiber.Ctx) error {
 // @Param id path int true "User ID"
 // @Param user body domain.UserRequest true "Updated user data object"
 // @Success 200 {object} domain.UserResponse "Successfully updated user by ID"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
+// @Failure 400 {object} domain.ErrorValidationResponse "Validation error"
 // @Router /user/{id} [put]
 func (u *UserHandler) Update(ctx *fiber.Ctx) error {
 	var req domain.UserRequest
@@ -271,14 +262,12 @@ func (u *UserHandler) Update(ctx *fiber.Ctx) error {
 	})
 }
 
-// Delete is a handler for deleting a user
 // @Summary Delete a user by ID
 // @Description Delete an existing user based on the provided ID
 // @Tags user
 // @Produce json
 // @Param id path int true "User ID"
 // @Success 200 {object} domain.SuccessResponse "Successfully deleted user by ID"
-// @Failure 400 {object} domain.ErrorValidationResponse "Validation failed"
 // @Router /user/{id} [delete]
 func (u *UserHandler) Delete(ctx *fiber.Ctx) error {
 	var req domain.UserRequest
